Release 0.016:
	* Updated for compatibility with DGD 1.2.68, which breaks back-compat
	* Removed old %get_config command
	* Made objects able to specifically remove nouns/adjs for
	  multiple inheritance
	* Made load/save files use multiple parents
	* Made object nouns, adjectives and descs use inheritance
	* Made objects use multiple inheritance, not just single
	* Added wiztool commands to manipulate tags, and help for them
	* Added a number of new Tag-related APIs
	* Made rooms and zonefiles include tag data in the save files
	* Made room/object types more modular

Release 0.015pre2:
	* Tagged OBJECTs and MOBILEs
	* Added a 'Tagged' library to manage tags
	* Added a TagD to track tag types
	* Moved scripting stuff into Phantasmal from testgame/SoN
	* Added toggle for first-ever login attempt to player_login()
	* Minor fix to cmd_help
	* More debugging on user/userlib interface.

Release 0.015pre1:
	* Separated user object into a user and a userlib, with the user
	  object overridable.  More work to do here
	* Moved logd_channels from data directory into /usr/System
	* Added a game driver object, made telnetd defer to it
	* Simplified /usr/game as more stuff moves into testgame
	* Moved objects out of /data, and made it easy to do the same for
	  helpfiles
	* Moved most Phantasmal headers into include/phantasmal
	* Modified TimeD to use only real-world time
	* Moved some headers into /include/phantasmal
	* Removed 'ask' function and all related hooks & docs
	* Changed hook function signatures and how enum_mobiles works
	* Full security audit for /usr/common/sys and /usr/common/obj
	* Full security audit for /usr/System
	* Added simple scripting to /usr/game
	* Added second AUTO object to /usr/game
	* Made /usr/game configure ConfigD directly
	* Made /usr/game's initd work
	* Moved most files out of /data into /usr/System, /usr/common and
	  /usr/game
	* Added /usr/game directory
	* Moved HelpD into ~System
	* Altered how tick counts for upgraded() work